// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterNetwork should render empty 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <ul
      class="inline-block"
      data-testid="NetworkOptions"
    />
  </div>
</div>
`;

exports[`FilterNetwork should render public networks 1`] = `
<div>
  <div
    data-testid="FilterNetwork"
  >
    <div
      class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
      data-testid="network__viewall"
    >
      <div
        class="text-sm font-semibold text-theme-primary-500"
      >
        All
      </div>
      <span
        class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
        <span />
      </span>
    </div>
    <ul
      class="inline-block"
      data-testid="NetworkOptions"
    >
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="NetworkOption__ARK"
      >
        <div
          class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
        >
          <div
            class="sc-AxirZ eEbZjj"
            height="20"
            width="20"
          >
            <svg>
              ark.svg
            </svg>
          </div>
          <span
            class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
          >
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="NetworkOption__LSK"
      >
        <div
          class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-AxirZ eEbZjj"
            height="20"
            width="20"
          >
            <svg>
              lsk.svg
            </svg>
          </div>
          <span
            class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
          >
            <div
              class="sc-AxirZ hDwaov"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
      <li
        class="inline-block mr-5 cursor-pointer"
        data-testid="NetworkOption__ETH"
      >
        <div
          class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
        >
          <div
            class="sc-AxirZ eEbZjj"
            height="20"
            width="20"
          >
            <svg>
              eth.svg
            </svg>
          </div>
          <span
            class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
          >
            <div
              class="sc-AxirZ hDwaov"
              height="12"
              width="12"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
            <span />
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`FilterNetworks should render empty 1`] = `
<div>
  <div
    class="space-y-6"
  />
</div>
`;

exports[`FilterNetworks should render public and testnet networks 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Public Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Development Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should render public networks 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Public Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should toggle a testnet network option 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Public Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Development Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should toggle view all 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Public Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-600 border-theme-primary-600 text-theme-primary-contrast"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-up.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
      <div
        class="mt-4 text-theme-secondary-text cursor-pointer"
      >
        <label>
          <input
            class="sc-AxjAm fwkVBO mr-2"
            color="success"
            data-testid="FilterNetwork__select-all-checkbox"
            type="checkbox"
          />
          Select All
        </label>
      </div>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Development Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`FilterNetworks should toggle view all 2`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Public Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ARK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
            >
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__ETH"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      data-testid="FilterNetwork"
    >
      <div
        class="mb-2 font-bold text-sm text-theme-neutral-400"
      >
        Development Network
      </div>
      <div
        class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxirZ fttODj"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
      <ul
        class="inline-block"
        data-testid="NetworkOptions"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="NetworkOption__LSK"
        >
          <div
            class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                lsk.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxirZ hDwaov"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`NetworkOptions should not render unknown networks 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ARK"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__LSK"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            lsk.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ETH"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            eth.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`NetworkOptions should render available networks options 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ARK"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__LSK"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            lsk.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ETH"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            eth.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`NetworkOptions should render empty 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  />
</div>
`;

exports[`NetworkOptions should render networks that have coin and id defined 1`] = `
<div>
  <ul
    class="inline-block"
    data-testid="NetworkOptions"
  >
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ARK"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-neutral-300"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-300 dark:border-theme-neutral-800"
        >
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__LSK"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            lsk.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
    <li
      class="inline-block mr-5 cursor-pointer"
      data-testid="NetworkOption__ETH"
    >
      <div
        class="sc-AxhCb gaiYPD relative border-theme-success-500 text-theme-success-500"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            eth.svg
          </svg>
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
        >
          <div
            class="sc-AxirZ hDwaov"
            height="12"
            width="12"
          >
            <svg>
              checkmark.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ToggleAllOption should render 1`] = `
<div>
  <div
    class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-500"
    >
      All
    </div>
    <span
      class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
      <span />
    </span>
  </div>
</div>
`;

exports[`ToggleAllOption should render hidden 1`] = `<div />`;

exports[`ToggleAllOption should render selected 1`] = `
<div>
  <div
    class="sc-AxhCb gaiYPD relative cursor-pointer border-theme-primary-contrast mr-5"
    data-testid="network__viewall"
  >
    <div
      class="text-sm font-semibold text-theme-primary-500"
    >
      All
    </div>
    <span
      class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-600 border-theme-primary-600 text-theme-primary-contrast"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          chevron-up.svg
        </svg>
      </div>
      <span />
    </span>
  </div>
</div>
`;
